--- a/BarberShop/app/src/main/res/values/strings.xml
+++ b/BarberShop/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
     <string name="app_name">BarberShop</string>
+    <string name="agenda">SCHEDULE</string>
+    <string name="registar_funcionario">Register Employee</string>
+    <string name="title_activity_list_employee">ActivityListEmployee</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="agendaMenu">SCHEDULE</string>
+    <string name="title_activity_form_empl">FormEmpl</string>
+    <string name="nome_funcionario">Employee Name</string>
+    <string name="salvar">To save</string>
 </resources>
