Layout customization, spinner correction, icon set and other small changes.

--- a/BarberShop/app/src/main/res/values/strings.xml
+++ b/BarberShop/app/src/main/res/values/strings.xml
@@ -18,4 +18,11 @@
 
     <string name="excluir">Exclude</string>
 
+    <!-- Toast -->
+    <string name="editado">Editado com sucesso!</string>
+    <string name="salvar_cliente">Cliente Agendado!</string>
+    <string name="cliente_vazio">Preencha todos os campos!</string>
+    <string name="cliente_excluido">Cliente excluido!</string>
+
+
 </resources>
